add star, date with a review to testimonial

--- a/_testimonials/2020-09-21-cintaqs.md
+++ b/_testimonials/2020-09-21-cintaqs.md
@@ -3,6 +3,7 @@ name: cintaqs
 profile: https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/cc76bc4299268e3767e0dcda61fc2302-1599828047844/b9e5a804-4339-4dd9-a915-36f87adb5b2d.jpg
 created_at: 2020-09-21
 source: fiverr
+rating: 5
 source_url: https://www.fiverr.com/theachoem
 ---
 It has been a real pleasure to work with theachoem. He is a good and diligent worker. I could fully trust him my project and even through not all was clear from my part, he found and proposed excellent solutions. I hire again :)
