--- a/_testimonials/2020-11-05-boudicca.md
+++ b/_testimonials/2020-11-05-boudicca.md
@@ -3,6 +3,7 @@ name: boudicca
 profile: https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/9619057b5e90d5c808007c626fc5bea9-1600683469660/4687a858-22f5-490d-abb8-392d3d64b39c.jpg
 created_at: 2020-11-05
 source: fiverr
+rating: 5
 source_url: https://www.fiverr.com/theachoem
 ---
 Thea has great design skills and excellent communication. Definitely recommend working with him!
