add source with dropdown

--- a/_timelines/2020-01-01-erobot.md
+++ b/_timelines/2020-01-01-erobot.md
@@ -3,7 +3,7 @@ type: work
 name: ERobot
 title: Member
 profile: https://user-images.githubusercontent.com/29684683/132103791-c7203c11-2638-4a14-a6d3-17e90e2afcd4.png
-website: https://web.facebook.com/ERobotKH
+facebook: https://web.facebook.com/ERobotKH
 start: 2020-01-01
 end: Current
 ---
