--- a/_timelines/2021-03-08-storypad.md
+++ b/_timelines/2021-03-08-storypad.md
@@ -3,7 +3,8 @@ type: app
 name: StoryPad
 title: Designer & Developer
 profile: https://play-lh.googleusercontent.com/BarXSGOfwiTKPZAVgzVonbDVZb5KyD3CjCsXL5t2o-3vJ069pmfeMVyXMM8sgS662hU=s360-rw
-website: https://play.google.com/store/apps/details?id=com.tc.writestory
+play_store: https://play.google.com/store/apps/details?id=com.tc.writestory
+github: https://github.com/juniorise/storypad
 start: 2021-03-08
 end: Pause
 ---
