--- a/_timelines/2021-06-29-camgeo.md
+++ b/_timelines/2021-06-29-camgeo.md
@@ -1,9 +1,9 @@
 ---
 type: app
 name: Cambodia Geography
-title: Team Lead & Mobile Developer
+title: Mobile Developer
 profile: https://user-images.githubusercontent.com/29684683/131380383-afb70586-d86f-47bd-9858-3e199a1bdef5.png
-website: https://github.com/CSG6Project1/cambodia_geography_mobile
+github: https://github.com/CSG6Project1/cambodia_geography_mobile
 start: 2021-06-29
 end: Current
 ---
