improve the portfolio & post tag

--- a/_timelines/2020-01-01-erobot.md
+++ b/_timelines/2020-01-01-erobot.md
@@ -4,6 +4,7 @@ name: ERobot
 title: Member
 profile: https://user-images.githubusercontent.com/29684683/132103791-c7203c11-2638-4a14-a6d3-17e90e2afcd4.png
 facebook: https://web.facebook.com/ERobotKH
+github: https://github.com/erobot-dev
 start: 2020-01-01
 end: Current
 ---
