enhance tag style & fix posts

--- a/_timelines/2020-01-01-erobot.md
+++ b/_timelines/2020-01-01-erobot.md
@@ -1,5 +1,5 @@
 ---
-type: work
+type: volunteer
 name: ERobot
 title: Member
 profile: https://user-images.githubusercontent.com/29684683/132103791-c7203c11-2638-4a14-a6d3-17e90e2afcd4.png
