fix erobot name

--- a/_timelines/2020-01-01-erobot.md
+++ b/_timelines/2020-01-01-erobot.md
@@ -1,8 +1,8 @@
 ---
 type: volunteer
-name: ERobot
+name: E-Robot
 title: Member
-profile: https://user-images.githubusercontent.com/29684683/132103791-c7203c11-2638-4a14-a6d3-17e90e2afcd4.png
+profile: https://user-images.githubusercontent.com/29684683/152301777-1ee7f2bc-9785-4ce9-9e7e-f0558d9aa4c1.png
 facebook: https://web.facebook.com/ERobotKH
 github: https://github.com/erobot-dev
 start: 2020-01-01
