improve fiverr testimonial style

--- a/_testimonials/2020-09-21-cintaqs.md
+++ b/_testimonials/2020-09-21-cintaqs.md
@@ -1,8 +1,8 @@
 ---
 name: cintaqs
-profile: https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/cc76bc4299268e3767e0dcda61fc2302-1599828047844/b9e5a804-4339-4dd9-a915-36f87adb5b2d.jpg
+profile: https://fiverr-res.cloudinary.com/image/upload/f_auto,q_auto,t_profile_small/v1/attachments/profile/photo/43ca15156932779083f484efee555a92-1636299128669/d64574d0-920d-4527-b361-d7640c14f1d8.jpeg
 created_at: 2020-09-21
-source: fiverr
+source: Fiverr
 rating: 5
 source_url: https://www.fiverr.com/theachoem
 ---
