--- a/_timelines/2020-11-17-vtenh.md
+++ b/_timelines/2020-11-17-vtenh.md
@@ -5,7 +5,8 @@ title: Mobile Developer
 profile: https://user-images.githubusercontent.com/29684683/152272287-13a8d415-2ca2-4d23-9448-36169ed49716.png
 play_store: https://play.google.com/store/apps/details?id=com.vtenh.app.store
 app_store: https://apps.apple.com/gh/app/vtenh-shop-easy/id1548621235
+readmore: /blogs/vtenh-experience/
 start: 2020-11-17
-end: 2021-09-27
+end: Current
 ---
-I work on implementing design, fetching & displaying data, feature requirements such as integrating deeplink & Facebook applink from API. Technology: Flutter, Git, Dio, Hook & Riverpod.
+I work on implementing design, fetching & displaying data, feature requirements such as integrating deeplink & Facebook applink from API...
