--- a/_posts/2021-09-27-intership-1.md
+++ b/_posts/2021-09-27-intership-1.md
@@ -6,6 +6,6 @@ categories: blogs
 author: Thea Choem
 comments: true
 cover: https://assets-cdn.vtenh.com/assets/vtenh-og-image-d48dbe9b85067c2b0242c9d25207c4a1d46f3720bfccdc11ba632ac19d1d7013.png
-permalink: /blogs/intership-1/
+permalink: /blogs/intership-1
 excerpt: true
 ---
