feat: improve timeline

--- a/_timelines/2019-11-01-cadt.md
+++ b/_timelines/2019-11-01-cadt.md
@@ -7,4 +7,4 @@ website: https://www.cadt.edu.kh/
 start: 2019-11-01
 end: Current
 ---
-My journey in the IT field starts from here!
+My journey started here :D
