--- a/_timelines/2020-01-01-erobot.md
+++ b/_timelines/2020-01-01-erobot.md
@@ -1,11 +1,12 @@
 ---
 type: volunteer
 name: E-Robot
-title: Member
+title: Innovation leader
 profile: https://user-images.githubusercontent.com/29684683/152301777-1ee7f2bc-9785-4ce9-9e7e-f0558d9aa4c1.png
 facebook: https://web.facebook.com/ERobotKH
-github: https://github.com/erobot-dev
+github: https://github.com/erobotkh
+readmore: blogs/developer-story
 start: 2020-01-01
 end: Current
 ---
-I joined as a volunteer in early 2020 then become a member & assigned to be the mobile team leader.
+Joined early 2020 as a volunteer. I built an robot controller app via Kodular & then moved to Flutter on July, 2020.
