--- a/_timelines/2021-03-08-storypad.md
+++ b/_timelines/2021-03-08-storypad.md
@@ -5,8 +5,9 @@ title: Designer & Developer
 profile: https://play-lh.googleusercontent.com/BarXSGOfwiTKPZAVgzVonbDVZb5KyD3CjCsXL5t2o-3vJ069pmfeMVyXMM8sgS662hU=s360-rw
 play_store: https://play.google.com/store/apps/details?id=com.tc.writestory
 github: https://github.com/juniorise/storypad
+readmore: portfolios/storypad
 start: 2021-03-08
-end: Pause
+end: moved to Spooky
 ---
 
-With my girlfriend, we figured out this app idea, then I designed & devleoped it.
+During my curiosity, I & my girlfriend figured out StoryPad idea, then designed & developed it. Currently has over 20k downloads.
