--- a/_timelines/2021-06-29-camgeo.md
+++ b/_timelines/2021-06-29-camgeo.md
@@ -5,8 +5,9 @@ title: Mobile Developer
 profile: https://user-images.githubusercontent.com/29684683/131380383-afb70586-d86f-47bd-9858-3e199a1bdef5.png
 github: https://github.com/CSG6Project1/cambodia_geography_mobile
 play_store: https://play.google.com/store/apps/details?id=com.juniorise.camgeo
+readmore: portfolios/camgeo
 start: 2021-06-29
 end: Current
 ---
 
-An open source mobile with API project. **Term 6**, Project 1 at CADT
+With my beloved friends, we built this open source mobile project with API. **Term 6**, Project 1 at CADT
