refactor vtenh role

--- a/_timelines/2020-11-17-vtenh.md
+++ b/_timelines/2020-11-17-vtenh.md
@@ -1,7 +1,7 @@
 ---
 type: work
 name: VTENH - Part Time
-title: Mobile Developer
+title: Software Developer
 profile: https://user-images.githubusercontent.com/29684683/152272287-13a8d415-2ca2-4d23-9448-36169ed49716.png
 play_store: https://play.google.com/store/apps/details?id=com.vtenh.app.store
 app_store: https://apps.apple.com/gh/app/vtenh-shop-easy/id1548621235
