Update vtenh end date

--- a/_timelines/2020-11-17-vtenh.md
+++ b/_timelines/2020-11-17-vtenh.md
@@ -7,6 +7,6 @@ play_store: https://play.google.com/store/apps/details?id=com.vtenh.app.store
 app_store: https://apps.apple.com/gh/app/vtenh-shop-easy/id1548621235
 readmore: /blogs/vtenh-experience
 start: 2020-11-17
-end: Current
+end: 2023-01-01
 ---
 After 3 months with Flutter at ERobot, I passed interview as a part time job at VTENH where I have a very validated experience in development field.
