Update to graduated

--- a/_timelines/2019-11-01-cadt.md
+++ b/_timelines/2019-11-01-cadt.md
@@ -5,6 +5,6 @@ title: Computer Science
 profile: https://user-images.githubusercontent.com/29684683/152300457-f874020d-70ed-4c73-8ce8-578cdef5ab35.jpeg
 website: https://www.cadt.edu.kh/
 start: 2019-11-01
-end: Current
+end: 2023-09-22
 ---
 My journey started here :D
